[REFACTOR] Add payment enums