@@ -1,7 +1,7 @@
 package id.ac.ui.cs.advprog.eshop.model;
 
+import id.ac.ui.cs.advprog.eshop.enums.PaymentStatus;
 import lombok.Getter;
-import lombok.Setter;
 
 import java.util.Collections;
 import java.util.HashMap;
@@ -10,7 +10,6 @@ import java.util.Objects;
 import java.util.UUID;
 
 @Getter
-@Setter
 public class Payment {
     private String id;
     private Order order;
@@ -22,7 +21,14 @@ public class Payment {
         this.id = UUID.randomUUID().toString();
         this.order = Objects.requireNonNull(order, "Order must not be null");
         this.method = Objects.requireNonNull(method, "Method must not be null");
-        this.status = status;
-        this.paymentData = Collections.unmodifiableMap(new HashMap<>(paymentData));
+        this.status = PaymentStatus.REJECTED.name();
+        setStatus(status);
+        this.paymentData = Collections.unmodifiableMap(new HashMap<>(paymentData == null ? Map.of() : paymentData));
+    }
+
+    public void setStatus(String status) {
+        if (PaymentStatus.contains(status)) {
+            this.status = status;
+        }
     }
 }
